--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="artists">Artists</string>
     <string name="movies">Movies</string>
     <string name="tvshow">TvShow</string>
+    <string name="update">Update</string>
 </resources>
